# local-chat

./: LICENSE  Makefile  requirements.txt  setup.cfg  setup.py
chat/: client.py  constants.py  interface.py  launcher.py  netutils.py
chat/cli/: commands.py  dialog.py  interface.py
tools/: Dockerfile
