[metadata]
name = local-chat
summary = Simple pure python LAN chat that makes use of broadcast and multicast ip addressing
author = Yury Zaitsau
description-file =
    README.md
classifier =
    License :: OSI Approved :: MIT
    Environment :: Any
    Intended Audience :: Information Technology
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
install_requires =
    urwid = 1.3.1

[files]
packages =
    chat

[entry_points]
console_scripts =
    local-chat = chat.launcher:main
